--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>INK-WORLD</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,900;1,100&family=Rye&display=swap"
+        rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
